fixed nav bug, intro-header overlapped nav links

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -532,7 +532,11 @@ img {
     z-index: 980; }
   #main-nav .nav-links {
     display: none;
-    background: rgba(44, 53, 62, 0.85); }
+    background: rgba(44, 53, 62, 0.85);
+    position: fixed;
+    right: 0;
+    left: 0;
+    z-index: 990; }
     @media (min-width: 499px) {
       #main-nav .nav-links {
         width: calc(100% - 40px);
@@ -587,7 +591,7 @@ img {
     position: absolute;
     right: 10px;
     top: 10px;
-    z-index: 985;
+    z-index: 990;
     padding: 8px;
     box-sizing: content-box; }
     @media (min-width: 499px) {
